# AIUnitTest

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  USAGE.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  create-release.yml  release.yml
docs/: initial.md
src/ai_unit_test/: _version.py  chunking.py  cli.py  coverage_helper.py  file_helper.py  indexing.py  llm.py  main.py  semantic_search.py
tests/unit/: conftest.py  fake.coverage  test_chunking.py  test_cli.py  test_file_helper.py  test_indexing.py  test_llm.py  test_semantic_search.py
